--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8081
 #Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username= itsol
-spring.datasource.password= itsol
+spring.datasource.username= itsoll
+spring.datasource.password= itsoll
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
