--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,14 @@
 server.port=8081
 #Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username= itsoll
-spring.datasource.password= itsoll
+spring.datasource.username=itsoll
+spring.datasource.password=itsoll
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-
+#Jwt
+bezkoder.app.jwtSecret=bezKoderSecretKey
+bezkoder.app.jwtExpirationMs=86400000
+#grokonez.app.jwtSecret=jwtGrokonezSecretKey
+#grokonez.app.jwtExpiration=864000000
